--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "redux-simple-starter",
+  "name": "redux-weather-app-aus",
   "version": "1.0.0",
   "description": "Simple starter package for Redux with React and Babel support",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "repository": "git@github.com:afide26/ReactReduxWeatherApp.git",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "postinstall": "webpack -p",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "Alan Fidelino",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.2.1",
@@ -20,6 +22,7 @@
   "dependencies": {
     "axios": "^0.8.1",
     "babel-preset-stage-1": "^6.1.18",
+    "express": "^4.15.3",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
