--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "postinstall": "webpack -p",
     "start": "node server.js"
   },
-  "engines":{
-    "node":"7.9.0"
+  "engines": {
+    "node": "7.9.0"
   },
   "author": "Alan Fidelino",
   "license": "ISC",
@@ -34,6 +34,6 @@
     "react-sparklines": "^1.4.2",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.0",
-    "webpack": "^1.12.9",
+    "webpack": "^3.4.1"
   }
 }
