--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
@@ -33,7 +34,6 @@
     "react-responsive-table": "^2.0.12",
     "react-sparklines": "^1.4.2",
     "redux": "^3.0.4",
-    "redux-promise": "^0.5.0",
-    "webpack": "^1.12.9",
+    "redux-promise": "^0.5.0"
   }
 }
