--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "postinstall": "webpack -p",
-    "start": "node server.js"
+    "start": "node ./server.js"
   },
   "engines": {
     "node": "7.9.0"
@@ -15,12 +15,7 @@
   "author": "Alan Fidelino",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+
   },
   "dependencies": {
     "axios": "^0.8.1",
@@ -34,6 +29,12 @@
     "react-responsive-table": "^2.0.12",
     "react-sparklines": "^1.4.2",
     "redux": "^3.0.4",
-    "redux-promise": "^0.5.0"
+    "redux-promise": "^0.5.0",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   }
 }
